# PoGo_Game_Engine

./: .gitignore  CMakeLists.txt  README.md  STATIC_LINKING.md  build_windows.bat
Game Engine/: Sun Surfer.sln
Game Engine/Data/: FBXConverter.config  ObjConverter.config  Sun Surfer.config
Game Engine/Data/Scenes/: Airship.PC.scene  Airship.PTN.scene  Character.PCT.scene  Character.PTN.scene  Crate.PTN.scene  Cube.PCTN.scene  Cube.PN.scene  Deer.PTN.scene  Dungeon_collision.PN.scene  Firepit.PTN.scene  Hideout.PCT.scene  Hideout.PN.scene  Hideout.PTN.scene  Missile.PCT.scene  Plane.PN.scene  Pyramid.PC.scene  Pyramid.PN.scene  Skybox.PCT.scene  SpecialCube.PC.scene  SpecialCube.PCT.scene  Stereo.PN.scene  Teapot.PN.scene  TeapotNoLid.PN.scene  Torch.PCT.scene  Torches.PTN.scene  Torus.PN.scene
Game Engine/Data/Shaders/: Billboard.frag.shader  Billboard.geom.shader  Billboard.vert.shader  Debug.vert.shader  DepthOnly.frag.shader  DepthOnly.vert.shader  Diffuse.frag.shader  Diffuse.vert.shader  DiffuseFunctions.vert.shader  Explode.frag.shader  Explode.geom.shader  Explode.vert.shader  FlatPhong.frag.shader  FlatPhong.vert.shader  FullscreenQuad.frag.shader  FullscreenQuad.geom.shader  FullscreenQuad.vert.shader  Lighting.frag.shader  Lighting.vert.shader  MaskDiscard.frag.shader  MultiplePhong.frag.shader  MultipleTextures.frag.shader  NormalHair.frag.shader  NormalHair.geom.shader  NormalHair.vert.shader  PassThrough.vert.shader  Phong.vert.shader  PhongCel.frag.shader  PhongDirectional.vert.shader  PhongDiscard.frag.shader  PhongDiscard.vert.shader  PhongFog.frag.shader  PhongFog.vert.shader  PhongShading.frag.shader  PhongShading.vert.shader  PhongShadow.frag.shader  PhongShadow.vert.shader  PhongShadowVolumes.frag.shader  PhongShadowVolumes.vert.shader  PhongSpotlight.frag.shader  (+16 more)
Game Engine/Debug/: ObjConverter.ilk  Sun Surfer.ilk
Game Engine/ObjConverter/: Main.cpp  MeshBuilder.cpp  MeshBuilder.h  ObjConverter.vcxproj  ObjConverter.vcxproj.filters  ObjReader.cpp  ObjReader.h
Game Engine/ObjConverter/Debug/: vc140.idb
Game Engine/ObjConverter/Debug/ObjConverter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ObjConverter.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Game Engine/Sun Surfer/: BinaryWriter.cpp  BinaryWriter.h  Buffer.cpp  Buffer.h  BufferGroup.cpp  BufferGroup.h  BufferManager.cpp  BufferManager.h  Camera.cpp  Camera.h  CameraComponent.cpp  CameraComponent.h  CollidableObject.cpp  CollidableObject.h  CollisionComponent.cpp  CollisionComponent.h  CollisionDetection.cpp  CollisionDetection.h  ColorVertex.cpp  ColorVertex.h  Component.cpp  Component.h  ConfigReader.cpp  ConfigReader.h  DiffuseFunctions.vert.shader  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  Filepath.cpp  Filepath.h  GameLogger.cpp  GameLogger.h  GameTime.cpp  GameTime.h  GraphicalComponent.cpp  GraphicalComponent.h  GraphicsObject.cpp  GraphicsObject.h  GravityComponent.cpp  (+72 more)
Game Engine/Sun Surfer/Debug/: vc140.idb
Game Engine/Sun Surfer/Debug/Sun Surfer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Middleware/PoGo/: pogo_core.exp  pogo_core.ilk  pogo_core.iobj  pogo_core.ipdb  pogo_graphics.exp  pogo_graphics.ilk  pogo_graphics.iobj  pogo_graphics.ipdb
Middleware/export/include/: ExportHeader.h
Middleware/stb/include/: stb_easy_font.h
PoGo_Engine/: PoGo_Engine.sln
PoGo_Engine/Debug/: PoGo Demo.ilk  pogo_core.exp  pogo_core.ilk  pogo_graphics.exp  pogo_graphics.ilk
PoGo_Engine/PoGo Demo/: PoGo Demo.vcxproj  game.cpp  game.h  main.cpp
PoGo_Engine/PoGo Demo/Debug/: vc140.idb
PoGo_Engine/PoGo Demo/Debug/PoGo Demo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PoGo_Engine/PoGo Demo/Release/: PoGo Demo.vcxprojResolveAssemblyReference.cache
PoGo_Engine/PoGo Demo/Release/PoGo Demo.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PoGo Demo.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
PoGo_Engine/PoGo Demo/x64/Release/PoGo Demo.tlog/: PoGo Demo.lastbuildstate
PoGo_Engine/Release/: PoGo Demo.iobj  PoGo Demo.ipdb
PoGo_Engine/pogo_core/: application_listener.h  engine.cpp  engine.h  engine_config.cpp  engine_config.h  pogo_core.vcxproj  pogo_core.vcxproj.filters  window.cpp  window.h  window_config.cpp  window_config.h
PoGo_Engine/pogo_core/Debug/: pogo_core.idb  vc140.idb
PoGo_Engine/pogo_core/Debug/pogo_core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  pogo_core.write.1u.tlog
PoGo_Engine/pogo_core/Release/pogo_core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  pogo_core.write.1u.tlog
PoGo_Engine/pogo_core/x64/Release/pogo_core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
PoGo_Engine/pogo_graphics/: deleteme.cpp  deleteme.h  pogo_graphics.vcxproj  pogo_graphics.vcxproj.filters
PoGo_Engine/pogo_graphics/Debug/: vc140.idb
PoGo_Engine/pogo_graphics/Debug/pogo_graphics.tlog/: CL.command.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  pogo_graphics.lastbuildstate  pogo_graphics.write.1u.tlog
PoGo_Engine/pogo_graphics/Release/pogo_graphics.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  pogo_graphics.write.1u.tlog
